src/test/ui/consts/projection_qualif.stock.stderr
error[E0764]: mutable references are not allowed in constants
  --> $DIR/projection_qualif.rs:10:27
   |
LL |         let b: *mut u32 = &mut a;
   |                           ^^^^^^ `&mut` is only allowed in `const fn`

error[E0658]: dereferencing raw pointers in constants is unstable
  --> $DIR/projection_qualif.rs:11:18
   |
LL |         unsafe { *b = 5; }
   |                  ^^^^^^
   |
   = note: see issue #51911 <https://github.com/rust-lang/rust/issues/51911> for more information
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0658, E0764.
For more information about an error, try `rustc --explain E0658`.
